refactor(linux): unified offscreen player, remove gpuMode=1, add shared EGL context
Unified Linux player path:
- Linux X11 and Wayland now both use offscreen rendering (Compose Canvas)
- Rename WaylandPlayerHost → LinuxPlayerHost
- Rename LinuxWaylandPlayerSurface → LinuxPlayerSurface
- Player controls render correctly on all Linux sessions

Removed dead code:
- gpuMode=1 (vo=gpu-next + X11 wid) — caused missing UI/focus issues
- JAWT X11 window resolution (getX11WindowId)
- LinuxAwtViewResolver
- detect_wayland() / isWayland / isWaylandSession
- usesSoftwareRendering / renderTimer in NativePlayerHost
- -ldl linker flag

NVIDIA EGL fix attempt:
- Add initEGL_SharedContext() — reuses Skia's EGLDisplay (captured from
  JNI thread) instead of creating a new one. NVIDIA blocks multiple
  EGLDisplays in same process but may allow shared display context.
- Fallback chain: GBM → SharedContext → DevicePlatform → SW